tests/specs/ecosystem/wdio/logger/0_1_0.test
wdio/logger/0.1.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:loglevel@^1.6.0": "npm:loglevel@1.9.1"
    },
    "npm": {
      "loglevel@1.9.1": {
        "integrity": "sha512-hP3I3kCrDIMuRwAwHltphhDM1r8i55H33GgqjXbrisuJhF4kRhW1dNuxsRklp4bXl8DSdLaNLuiL4A/LWRfxvg==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/node.ts:169:27
    | 
169 | getLogger.waitForBuffer = async () => new Promise<void>(resolve => {
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
170 |     // @ts-ignore
    | ^^^^^^^^^^^^^^^^^
171 |     if (logFile && Array.isArray(logFile.writableBuffer) && logFile.writableBuffer.length !== 0) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
172 |         return setTimeout(async () => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
173 |             await getLogger.waitForBuffer()
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
174 |             resolve()
    | ^^^^^^^^^^^^^^^^^^^^^
175 |         }, 20)
    | ^^^^^^^^^^^^^^
176 |     }
    | ^^^^^
177 |     resolve()
    | ^^^^^^^^^^^^^
178 | })
    | ^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/node.ts:179:22
    | 
179 | getLogger.setLevel = (name: string, level: log.LogLevelDesc) => loggers[name].setLevel(level)
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'waitForBuffer' conflicts with 'getLogger.waitForBuffer'
   --> /src/node.ts:173:29
    | 
173 |             await getLogger.waitForBuffer()
    |                             ^^^^^^^^^^^^^
    = hint: rename 'waitForBuffer' to something else to avoid conflicts or create a temporary variable to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'setLevel' conflicts with 'getLogger.setLevel'
   --> /src/node.ts:179:79
    | 
179 | getLogger.setLevel = (name: string, level: log.LogLevelDesc) => loggers[name].setLevel(level)
    |                                                                               ^^^^^^^^
    = hint: rename 'setLevel' to something else to avoid conflicts or create a temporary variable to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


